@@ -113,6 +113,7 @@ module Fairy
 
     def_prop :XMARSHAL_QUEUE_CHUNK_SIZE
     def_prop :XMARSHAL_QUEUE_MIN_CHUNK_NO
+    def_prop :XMARSHAL_QUEUE_USE_STRING_BUFFER
 
     def_prop :SORTEDQUEUE_POOL_THRESHOLD
     def_prop :SORTEDQUEUE_THRESHOLD
@@ -305,6 +306,7 @@ module Fairy
 
   DEFAULT_CONF.XMARSHAL_QUEUE_CHUNK_SIZE = DEFAULT_CONF.MARSHAL_QUEUE_CHUNK_SIZE 
   DEFAULT_CONF.XMARSHAL_QUEUE_MIN_CHUNK_NO = DEFAULT_CONF.MARSHAL_QUEUE_MIN_CHUNK_NO 
+  DEFAULT_CONF.XMARSHAL_QUEUE_USE_STRING_BUFFER = true
   
   DEFAULT_CONF.SORTEDQUEUE_POOL_THRESHOLD = DEFAULT_CONF.POOLQUEUE_POOL_THRESHOLD
   DEFAULT_CONF.SORTEDQUEUE_THRESHOLD = 10000/2
